# sway-mirror

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
aur/: .SRCINFO  PKGBUILD
debian/: changelog  control  copyright  rules
src/: main.rs  sway.rs
src/capture/: dmabuf.rs  mod.rs
src/render/: egl.rs  mod.rs  surface.rs
src/wayland/: connection.rs  mod.rs  outputs.rs
